# commerce-ml-lab

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt  streamlit_app.py  utils.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: architecture.md  data-sources.md  future-work.md
pages/: 1_Demand_Forecasting.py  2_Returns_Intelligence.py  3_Checkout_Uplift.py  4_Shipping_Optimization.py  home.py
projects/01_demand_forecasting/: README.md  report.ipynb
projects/01_demand_forecasting/api/: main.py  schemas.py
projects/01_demand_forecasting/notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_lightgbm.ipynb  04_inventory_optimization.ipynb
projects/01_demand_forecasting/results/: baselines_metrics.csv  eda_summary.csv  inventory_policies.csv  lgbm_metrics.csv
projects/01_demand_forecasting/src/forecasting/: __init__.py  data.py  evaluate.py  features.py  inventory.py  lgbm_model.py  models.py  train.py
projects/01_demand_forecasting/tests/: conftest.py  test_data_pipeline.py  test_inventory.py  test_lgbm.py  test_models.py
projects/02_returns_intelligence/: MODEL_CARD.md  README.md  report.ipynb
projects/02_returns_intelligence/api/: main.py  schemas.py
projects/02_returns_intelligence/notebooks/: 01_synthetic_eda.ipynb  02_return_likelihood.ipynb  03_fraud_detection.ipynb  04_exchange_recommender.ipynb
projects/02_returns_intelligence/results/: customers.parquet  orders.parquet  returns.parquet
projects/02_returns_intelligence/src/returns/: __init__.py  evaluate.py  exchange.py  fraud.py  likelihood.py  synthetic.py  train.py
projects/02_returns_intelligence/tests/: test_returns.py
projects/03_checkout_intent/: README.md  report.ipynb
projects/03_checkout_intent/notebooks/: 01_eda.ipynb  02_propensity.ipynb  03_uplift.ipynb
projects/03_checkout_intent/src/intent/: __init__.py  evaluate.py  features.py  models.py  train.py
projects/03_checkout_intent/tests/: test_intent.py
projects/04_shipping_optimization/: README.md  report.ipynb
projects/04_shipping_optimization/api/: main.py  schemas.py
projects/04_shipping_optimization/notebooks/: 01_synthetic_eda.ipynb  02_elasticity_model.ipynb
projects/04_shipping_optimization/results/: sessions.parquet  shipping_metrics.csv
projects/04_shipping_optimization/src/shipping/: __init__.py  elasticity.py  optimizer.py  synthetic.py  train.py
projects/04_shipping_optimization/tests/: test_shipping.py
src/commerce_ml/: __init__.py
src/commerce_ml/data/: __init__.py  loaders.py  synthetic.py
src/commerce_ml/evaluation/: __init__.py  backtest.py  classification_metrics.py  forecast_metrics.py
src/commerce_ml/features/: session_features.py  time_features.py
src/commerce_ml/viz/: __init__.py  plotting.py
tests/: test_data_loaders.py  test_features.py  test_forecast_metrics.py
