[project]
name = "commerce-ml"
version = "0.1.0"
description = "Commerce ML portfolio: demand forecasting, returns intelligence, and checkout intent"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "statsforecast>=1.7",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.28",
    "pydantic>=2.6",
    "networkx>=3.3",
    "shap>=0.45",
    "scipy>=1.13",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "kaggle>=1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commerce_ml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["commerce_ml"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]
"notebooks/*" = ["E402", "F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "projects"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["--tb=short", "-q"]

[tool.coverage.run]
source = ["src/commerce_ml"]
omit = ["*/tests/*", "*/.ipynb_checkpoints/*"]
